<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Validation -->
    <string name="validate_error_email">Invalid email</string>
    <string name="validate_error_length_min">Too short (min. %d)</string>
    <string name="validate_error_length_max">Too long (max. %d)</string>
    <string name="validate_error_required">Required</string>
    <string name="validate_error_alphanumeric">Only letters and numbers</string>

    <!-- App -->
    <string name="app_name" translatable="false">Teedy</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="login_explain"><![CDATA[To start, you must download and install Teedy Server on <a href="https://github.com/sismics/docs">github.com/sismics/docs</a> and enter its below]]></string>
    <string name="server">Server</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="login_fail_title">Login fail</string>
    <string name="login_fail">Wrong username or password</string>
    <string name="network_error_title">Network error</string>
    <string name="network_error">Network error, please check internet connectivity and server URL</string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="invalid_url">Please check the server URL and try again</string>
    <string name="crash_toast_text">A crash occurred, a report has been sent to resolve this problem</string>
    <string name="created_date">Created date</string>
    <string name="download_file">Download current file</string>
    <string name="download_document">Download</string>
    <string name="action_search">Search documents</string>
    <string name="all_documents">All documents</string>
    <string name="shared_documents">Shared documents</string>
    <string name="all_tags">All tags</string>
    <string name="no_tags">No tags</string>
    <string name="error_loading_tags">Error loading tags</string>
    <string name="no_documents">No documents</string>
    <string name="error_loading_documents">Error loading documents</string>
    <string name="no_files">No files</string>
    <string name="error_loading_files">Error loading files</string>
    <string name="new_document">New document</string>
    <string name="share">Sharing</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="add_share_hint">Name the share (optional)</string>
    <string name="document_not_shared">This document is not currently shared</string>
    <string name="delete_share">Delete this share</string>
    <string name="send_share">Send this share link</string>
    <string name="error_loading_shares">Error loading shares</string>
    <string name="error_adding_share">Error adding share</string>
    <string name="share_default_name">Share link</string>
    <string name="error_deleting_share">Error deleting the share</string>
    <string name="send_share_to">Send share link to</string>
    <string name="upload_file">Add file</string>
    <string name="upload_from">Upload a file from</string>
    <string name="settings">Settings</string>
    <string name="logout">Sign Out</string>
    <string name="version">Version</string>
    <string name="build">Build</string>
    <string name="pref_advanced_category">Advanced settings</string>
    <string name="pref_about_category">About</string>
    <string name="pref_github">GitHub</string>
    <string name="pref_issue">Report a bug</string>
    <string name="pref_clear_cache_title">Clear cache</string>
    <string name="pref_clear_cache_summary">Cleanup cached files</string>
    <string name="pref_clear_cache_success">Cache cleared</string>
    <string name="pref_clear_history_title">Clear search history</string>
    <string name="pref_clear_history_summary">Wipe the recent search suggestions</string>
    <string name="pref_clear_history_success">Search history cleared</string>
    <string name="pref_cache_size">Cache size</string>
    <string name="language_french" translatable="false">Français</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_german" translatable="false">Deutsch</string>
    <string name="language_polish" translatable="false">Polish</string>
    <string name="save">Save</string>
    <string name="edit_document">Edit</string>
    <string name="error_editing_document">Network error, please try again</string>
    <string name="please_wait">Please wait</string>
    <string name="document_editing_message">Sending your data</string>
    <string name="delete_document">Delete</string>
    <string name="delete_document_title">Delete document</string>
    <string name="delete_document_message">Really delete this document and all associated files?</string>
    <string name="document_delete_failure">Network error while deleting this document</string>
    <string name="document_deleting_message">Deleting document</string>
    <string name="delete_file_title">Delete file</string>
    <string name="delete_file_message">Really delete the current file?</string>
    <string name="file_delete_failure">Network error while deleting the current file</string>
    <string name="file_deleting_message">Deleting file</string>
    <string name="error_reading_file">Error while reading the file</string>
    <string name="upload_notification_title">Teedy</string>
    <string name="upload_notification_message">Uploading the new file to the document</string>
    <string name="upload_notification_error">Error uploading the new file</string>
    <string name="delete_file">Delete current file</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="search">Search</string>
    <string name="add_tags">Add tags</string>
    <string name="creation_date">Creation date</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="simple_search">Simple search</string>
    <string name="fulltext_search">Fulltext search</string>
    <string name="creator">Creator</string>
    <string name="after_date">After date</string>
    <string name="before_date">Before date</string>
    <string name="search_tags">Search tags</string>
    <string name="all_languages">All languages</string>
    <string name="toggle_informations">Toggle informations</string>
    <string name="who_can_access">Who can access</string>
    <string name="comments">Comments</string>
    <string name="no_comments">No comments</string>
    <string name="error_loading_comments">Error loading comments</string>
    <string name="send">Send</string>
    <string name="add_comment">Add a comment</string>
    <string name="comment_add_failure">Error adding a comment</string>
    <string name="adding_comment">Adding a comment</string>
    <string name="comment_delete">Delete comment</string>
    <string name="deleting_comment">Deleting comment</string>
    <string name="error_deleting_comment">Error deleting comment</string>
    <string name="export_pdf">PDF</string>
    <string name="download">Download</string>
    <string name="margin">Margin</string>
    <string name="fit_image_to_page">Fit image to page</string>
    <string name="export_comments">Export comments</string>
    <string name="export_metadata">Export metadata</string>
    <string name="mm">mm</string>
    <string name="download_file_title">Teedy file export</string>
    <string name="download_document_title">Teedy document export</string>
    <string name="download_pdf_title">Teedy PDF export</string>
    <string name="latest_activity">Latest activity</string>
    <string name="activity">Activity</string>
    <string name="email">E-mail</string>
    <string name="storage_quota">Storage quota</string>
    <string name="storage_display">%1$d/%2$d MB</string>
    <string name="validation_code">Validation code</string>
    <string name="shared">Shared</string>
    <string name="language">Language</string>
    <string name="coverage">Coverage</string>
    <string name="type">Type</string>
    <string name="source">Source</string>
    <string name="format">Format</string>
    <string name="publisher">Publisher</string>
    <string name="identifier">Identifier</string>
    <string name="subject">Subject</string>
    <string name="rights">Rights</string>
    <string name="contributors">Contributors</string>
    <string name="relations">Relations</string>

    <!-- Audit log -->
    <string name="auditlog_Acl">ACL</string>
    <string name="auditlog_Comment">Comment</string>
    <string name="auditlog_Document">Document</string>
    <string name="auditlog_File">File</string>
    <string name="auditlog_Group">Group</string>
    <string name="auditlog_Route">Workflow</string>
    <string name="auditlog_RouteModel">Workflow model</string>
    <string name="auditlog_Tag">Tag</string>
    <string name="auditlog_User">User</string>
    <string name="auditlog_Webhook">Webhook</string>
    <string name="auditlog_created">created</string>
    <string name="auditlog_updated">updated</string>
    <string name="auditlog_deleted">deleted</string>

</resources>
